# experiment-copilot

./: .gitignore  EXPERIMENTS.md  README.md  customer_churn_random_forest.py  download_customer_churn_data.sh  llama-router-presets.ini  pyproject.toml  tune_churn_threshold.py
.cursor/skills/churn-rf-experiment-tracker/: SKILL.md
mcp-web-browse/: README.md  pyproject.toml
mcp-web-browse/src/mcp_web_browse/: __init__.py  fetch.py  search.py  security.py  server.py
mcp-web-browse/tests/: test_fetch.py  test_search.py  test_security.py
