[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-web-browse"
version = "0.1.0"
description = "MCP server: web_search + fetch_url for llama.cpp Web UI / Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "lxml_html_clean>=0.4",
    "trafilatura>=1.8",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mcp-web-browse = "mcp_web_browse.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
